cursive-bootstrap/tests/ui/E-CON/E-CON-0092.cursive
// RUN: compile-fail
// DIAG: E-CON-0092
// SPEC: 8.9
// DESC: wait expression inside speculative block

record Counter {
    value: i32
}

procedure wait_in_speculative(domain: $ExecutionDomain, c: shared Counter) -> () {
    parallel domain {
        let h = spawn { return 1 }
        # speculative write c {
            wait h  //~ ERROR E-CON-0092: wait in speculative block
        }
    }
    return ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
